[css] Fix paginator missing `border-top` on mobile.

--- a/admin_interface/static/admin_interface/css/form-controls.css
+++ b/admin_interface/static/admin_interface/css/form-controls.css
@@ -16,7 +16,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     border-radius: 0;
-    border-top: 1px solid #EEEEEE;
+    border-top: 1px solid #EEEEEE !important;
     border-bottom: none;
     margin: 0;
 }
